<resources>
    <string name="app_name">TCCApp</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome">Nome:</string>
    <string name="estado">Estado:</string>
    <string name="cidade">Cidade:</string>
    <string name="senha">Senha:</string>
    <string name="e_mail">E-mail:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logar">Logar</string>
    <string name="reservar_vaga">Reservar Vaga</string>
    <string name="cancelar_reserva">Cancelar Reserva</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="adicionar_vagas">Adicionar Vagas</string>
    <string name="remover_vagas">Remover Vagas</string>
    <string name="listar_usuarios">Listar Usuarios</string>
    <string name="verificar_vagas">Verificar Vagas</string>
    <string name="tipo">Tipo</string>
    <string name="tipo_da_vaga">Tipo da vaga</string>
    <string name="nomeuser">NomeUser</string>
    <string name="emailuser">emailUser</string>
    <string name="cidadeuser">CidadeUser</string>
    <string name="estadouser">EstadoUser</string>
    <string name="topo">Topo</string>
    <string name="estadoadmin">Estado</string>
    <string name="nomeadmin">Nome</string>
    <string name="cidadeadmin">Cidade</string>
    <string name="senhaadmin">Senha</string>
    <string name="sobrenomeadmin">Sobrenome</string>
    <string name="e_mailadmin">E-mail</string>
    <string name="cadastraradmin">Cadastrar</string>
    <string name="cadastrar_admin">Cadastrar Admin</string>


    <string-array name="tipoVagas">
        <item>Normal</item>
        <item>Deficiente</item>
    </string-array>
</resources>
